--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <nav>
-      <a href="#"
+      <a href="https://www.netflix.com/kg-ru/"
         ><img class="img-logo" src="./img/netflix_logo.png" alt="logo"
       /></a>
     </nav>
     <div class="form-wrapper">
-      <h2>Sing In</h2>
+      <h2>To come in</h2>
       <form action="#">
         <div class="form-control">
           <input type="text" required />
@@ -37,7 +37,7 @@
           <a href="#">Need help?</a>
         </div>
       </form>
-      <p>New to Netflix? <a href="#">Sing up now</a></p>
+      <p>New to Netflix? <a href="#">Register now </a></p>
       <small>
         This pageis protected by Goolge reCAPTCHA to ensure you're not a bot.
         <a href="#">Learn more.</a>
